Allow vertical overflow for carousel images to prevent cropping
- Changed overflow to overflow-x: hidden, overflow-y: visible on cycling container
- Updated images container to allow vertical overflow
- Removed unnecessary max-height constraints
- Simple fix to allow taller carousel images to display fully without cropping

--- a/src/app/item/[slug]/images.module.scss
+++ b/src/app/item/[slug]/images.module.scss
@@ -2,7 +2,8 @@
 
 .images {
     margin-left: 20px;
-    overflow: hidden;
+    overflow-x: hidden;
+    overflow-y: visible;
     position: relative;
 
     @include common.mobile {
