--- a/src/app/thumbnail.module.scss
+++ b/src/app/thumbnail.module.scss
@@ -14,11 +14,11 @@
 }
 
 .cyclingContainer {
-    overflow: hidden;
+    overflow-x: hidden;
+    overflow-y: visible;
     display: flex;
     align-items: center;
     justify-content: center;
-    min-height: 500px; /* Ensure enough height for taller images */
 }
 
 .imageWrapper {
@@ -27,10 +27,6 @@
     transition: opacity 0.2s ease-in-out;
 }
 
-.cyclingContainer .imageWrapper {
-    max-width: 100%;
-    max-height: 100%;
-}
 
 .skeleton {
     position: absolute;
